WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284062
REGRESSION(
287160@main
) Perf-Dashboard subtest (speedometer3) spends considerable time in capitalizing content
https://bugs.webkit.org/show_bug.cgi?id=284062
Summary
REGRESSION(287160@main) Perf-Dashboard subtest (speedometer3) spends conside...
alan
Reported
2024-12-04 13:52:24 PST
ssia
Attachments
[fast-cq]Patch
(1.64 KB, patch)
2024-12-04 13:57 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-12-04 13:57:13 PST
Created
attachment 473462
[details]
[fast-cq]Patch
EWS
Comment 2
2024-12-05 09:08:44 PST
Committed
287405@main
(a3f8d64367d4): <
https://commits.webkit.org/287405@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 473462
[details]
.
Radar WebKit Bug Importer
Comment 3
2024-12-05 09:09:19 PST
<
rdar://problem/140984400
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug