REGRESSION(287160@main) Perf-Dashboard subtest (speedometer3) spends considerable time in capitalizing content https://bugs.webkit.org/show_bug.cgi?id=284062

Reviewed by Antti Koivisto.

1. In many cases we already have capitalized content
2. u_totitle can surely handle ascii content (vs. the more expensive u_strToTitle)

* Source/WebCore/rendering/RenderText.cpp:
(WebCore::capitalizeCharacter):

Canonical link: https://commits.webkit.org/287405@main